--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy[asyncio]==2.0.23
 asyncpg==0.29.0
+psycopg2-binary==2.9.9
 alembic==1.12.1
-pydantic==2.5.0
+pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
