--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 hypothesis==6.92.1
 httpx==0.25.1
+apscheduler==3.10.4
 
 # Sports data ingestion libraries
 nflreadpy
